# Misky

./: package.json
model_test/: app.py  index.html  main.py  pyproject.toml  test.py  wisper.html
model_test/llm/: app.py  index.html  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
